commit ajustes estandar

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <main class="container">
         <header class="con-t">
             <h1 class="cth">Dojonary</h1>
-            <input class="cts" type="search" placeholder="Search">
-            <button class="ctb" onclick="switchbtn(this)">Login</button>
+                <input class="cts" type="search" placeholder="Search">
+                <button class="ctb">Login</button>
             <!-- <input class="ctb" onclick="switchbtn(this) type="button" value="Login"> -->
         </header>
         <div class="con-m">
-            <aside class="asi-l">
+            <article class="art-l">
                 <article class="art-t">
                     <div class="subart-t">
                         <section class="lsec-tit">
@@ -27,7 +27,7 @@
                             <h3 class="lst-h3">noun</h3>
                             <p class="lst-p">Plural: <span>ninjas</span></p>
                         </section>
-                        <button class="lsec-btn" onclick="alert('Ninja was liked')">13 likes</button>
+                        <button class="lsec-btn">13 likes</button>
                     </div>
                     <section class="lsec-txt">
                         <p>A practitioner skilled in the <br><a href="#">Japanese</a> art of <a href="#">ninjutsu</a></p>
@@ -46,15 +46,15 @@
                         <p>A <a href="#">programmer</a> who breaks <br> down problems with <a href="#">zen</a>-like <br> focus</p>
                     </section>
                 </article>
-            </aside>
+            </article>
             <aside class="asi-r">
                 <article class="art-c">
                     <section class="rsec-tit">
                         <p class="rst-h2">Dojonary is <br> defined by <span>YOU</span></p>
                     </section>
-                    <button class="rsec-btn" onclick="removebtn(this)">Add Definition</button>
+                    <button class="rsec-btn">Add Definition</button>
                 </article>
-            </aside>    
+            </aside>  
         </div>
     </main>
     <script src="script.js"></script>
